# ObjectDetector

./: .gitignore  CMakeLists.txt  Info.plist  LICENSE  README.md  build.sh  main.cpp
controller/: detectioncontroller.cpp  detectioncontroller.h
helpers/: detection.h
model/: cameralistmodel.cpp  cameralistmodel.h  cameramodel.hpp  cameramodel.mm  yoloparser.cpp  yoloparser.h
resources/yolo11n.mlpackage/: Manifest.json
resources/yolo11n.mlpackage.back/: Manifest.json
resources/yolo11n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
tests/: CMakeLists.txt  tst_yoloparser.cpp
view/: Main.qml  qml.qrc
